--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "eslint": "^7.16.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
