--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "git push heroku master",
     "logs:prod": "heroku logs --tail",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "dependencies": {
     "cors": "^2.8.5",
